--- a/content/producers/maria-irazoki_20220620191126.md
+++ b/content/producers/maria-irazoki_20220620191126.md
@@ -5,4 +5,6 @@ firstname: Maria
 biography: Boulangère paysanne (à modifier)
 activity: Paysanne boulangère
 photoUrl: /uploads/images/pain.jpg
+contracts:
+  - pain-2022
 ---
