refacto(tutors): added more contact infos to tutors

--- a/content/contracts/pain-2022.md
+++ b/content/contracts/pain-2022.md
@@ -4,7 +4,8 @@ description: Un contrat
 calendarLink: https://www.amap-goutte-eau.fr
 tutors:
   - GN8E_CThN
-  - GN8E_CThN
+  - HvSDm18v7
+  - 7G11ESSbi
 photoUrl: /uploads/images/pain.jpg
 documentPath: /uploads/files/contrat_pain_2022.pdf
 ---
