Update Contrat “pain-2022”

--- a/content/contracts/pain-2022.md
+++ b/content/contracts/pain-2022.md
@@ -1,9 +1,19 @@
 ---
 title: Contrat pain 2022
-description: |-
-  Le nouveau contrat pain est arrivé !
+description: >-
+  Il est proposé  du pain au levain (mélange de farines locales type 80 et type
+  110), cuit au feu de bois, produit selon le cahier des charges de l’
+  Agriculture
+
+  Biologique (licence n° 108871P)
+
+  Pain nature ou pain aux graines (sésame, lin, tournesol) de 1kg
+
+  Pain spécial (cumin/fromage ou origan/sésame ou pavot) de 500g
+
 
   Pensez à RENOUVELER VOTRE ADHESION pour 2022
+
 
   Et à vous inscrire à une PERMANENCE.
 tutors:
