Update Producteur “maria-irazoki_20220620191126”

--- a/content/producers/maria-irazoki_20220620191126.md
+++ b/content/producers/maria-irazoki_20220620191126.md
@@ -29,14 +29,14 @@ activity: " Au sujet du pain : Le pain était le but, la raison d’être de not
   levure sont très aérés avec de larges alvéoles. Attention, un levain sur
   levure, c’est pareil. Cela signifie qu’on a prélevé une boule de pâte (à la
   levure) d’une précédente fournée, avec laquelle on ensemence la fournée
-  suivante… cela n’a rien à voir avec le levain naturel. JPG - 20.7 ko Pain
-  Irazoki aux graines Le levain sauvage (ou naturel) se forme à partir des
-  microorganismes naturellement présents dans l’air, la farine, l’eau et sur le
-  récipient. Des bactéries transforment les sucres en acide tandis que les
-  levures naturelles font lever le pain mais beaucoup moins que la levure. C’est
-  ce qui explique qu’un pain au levain naturel aura une mie peu alvéolée avec
-  une saveur acide plus ou moins prononcée. Il a aussi plus de goût, se conserve
-  plus longtemps et est plus digeste."
+  suivante… cela n’a rien à voir avec le levain naturel. Le levain sauvage (ou
+  naturel) se forme à partir des microorganismes naturellement présents dans
+  l’air, la farine, l’eau et sur le récipient. Des bactéries transforment les
+  sucres en acide tandis que les levures naturelles font lever le pain mais
+  beaucoup moins que la levure. C’est ce qui explique qu’un pain au levain
+  naturel aura une mie peu alvéolée avec une saveur acide plus ou moins
+  prononcée. Il a aussi plus de goût, se conserve plus longtemps et est plus
+  digeste."
 address: "La Pinellerie "
 postcode: "49250"
 city: Gée
