Update Tuteur “jerome-belouard_20220701130534”

--- a/content/tutors/jerome-belouard_20220701130534.md
+++ b/content/tutors/jerome-belouard_20220701130534.md
@@ -2,6 +2,9 @@
 id: afS8B-V1F
 lastname: Belouard
 firstname: Jérôme
+address: 16 rue le bas chemin
+postcode: 49800 Loire Authion
+city: La Bohalle
 phone: 06 72 24 78 64
 email: beljer@free.fr
 photoUrl: /uploads/images/depositphotos_1603378-stock-photo-man-with-fork-on-white.jpg
