Update Producteur “david-orsenneau_20220629185048”

--- a/content/producers/david-orsenneau_20220629185048.md
+++ b/content/producers/david-orsenneau_20220629185048.md
@@ -2,8 +2,12 @@
 id: zNUar7t1u
 lastname: Orsenneau
 firstname: David
-biography: Pêcheur à l'Ile d'Yeu
+biography: |-
+  Pêcheur à l'Ile d'Yeu 
+
+  Patron du bateau le Mammouth
 activity: Pêcheur
+address: Ile d'Yeu
 photoUrl: /uploads/images/_mg_4642.jpg
 contracts:
   - contrat-poisson-2022-2023
