Update Producteur “yohann-buret_20220729125640”

--- a/content/producers/yohann-buret_20220729125640.md
+++ b/content/producers/yohann-buret_20220729125640.md
@@ -1,8 +1,28 @@
 ---
 id: ped66L5OJ
-lastname: buret
-firstname: yohann
-biography: bbb
-activity: production lait de brebis
+lastname: Buret
+firstname: Yohann
+biography: >-
+  Yohann Buret est multi producteur !
+
+
+  De lait de brebis qu'il transforme en yaourts,  brebis doux et fromages
+
+
+  de merguez de brebis
+
+
+  De colis de viande d'agneau
+
+
+  de crêpes et galettes tournées à partir de lait de brebis et, éventuellement, de lait de vache après le tarissement des brebis
+activity: production lait de brebis, viande d'agneau, merguez
+address: "Bergerie La Violaie, "
+postcode: 49370 Erdre en Anjou
+city: La Pouëze
 photoUrl: /uploads/images/agneau.jpg
+contracts:
+  - contrat-de-viande-dagneau
+  - contrat-yaourts-de-brebis
+  - contrat-fromages-et-yaourts-de-brebis
 ---
