Update Producteur “yohann-buret_20220729125640”

--- a/content/producers/yohann-buret_20220729125640.md
+++ b/content/producers/yohann-buret_20220729125640.md
@@ -2,20 +2,20 @@
 id: ped66L5OJ
 lastname: Buret
 firstname: Yohann
-biography: >-
-  Yohann Buret est multi producteur !
+biography: |-
+  
 
+  La bergerie de la Violaie est une ferme menée en agriculture biologique.
+
+  Yohann Buret est multi producteur !
 
   De lait de brebis qu'il transforme en yaourts,  brebis doux et fromages
 
-
   de merguez de brebis
-
 
   De colis de viande d'agneau
 
-
-  de crêpes et galettes tournées à partir de lait de brebis et, éventuellement, de lait de vache après le tarissement des brebis
+  De crêpes et galettes tournées à partir de lait de brebis.
 activity: production lait de brebis, viande d'agneau, merguez
 address: "Bergerie La Violaie, "
 postcode: 49370 Erdre en Anjou
