Update Producteur “yohann-buret_20220729125640”

--- a/content/producers/yohann-buret_20220729125640.md
+++ b/content/producers/yohann-buret_20220729125640.md
@@ -20,7 +20,7 @@ activity: production lait de brebis, viande d'agneau, merguez
 address: "Bergerie La Violaie, "
 postcode: 49370 Erdre en Anjou
 city: La Pouëze
-photoUrl: /uploads/images/agneau.jpg
+photoUrl: /uploads/images/capture-d-e-cran-2022-07-31-a-09.58.33.png
 contracts:
   - contrat-de-viande-dagneau
   - contrat-yaourts-de-brebis
