--- a/content/tutors/jerome-belouard_20220701130534.md
+++ b/content/tutors/jerome-belouard_20220701130534.md
@@ -2,9 +2,9 @@
 id: afS8B-V1F
 lastname: Belouard
 firstname: Jérôme
-address: 16 rue le bas chemin
-postcode: 49800 Loire Authion
-city: La Bohalle
+address: 16, rue le bas chemin, La Bohalle
+postcode: "49800"
+city: Loire-Authion
 phone: 06 72 24 78 64
 email: beljer@free.fr
 photoUrl: /uploads/images/depositphotos_1603378-stock-photo-man-with-fork-on-white.jpg
