Update Producteur “renaud-alimeria_20221014195937”

--- a/content/producers/renaud-alimeria_20221014195937.md
+++ b/content/producers/renaud-alimeria_20221014195937.md
@@ -3,6 +3,7 @@ id: AxEwXIAEV
 lastname: Alimeria
 firstname: Renaud
 biography: Test
-activity: Fruits corses
-photoUrl: /uploads/images/depositphotos_1603378-stock-photo-man-with-fork-on-white.jpg
+activity: Production et vente de fruits corses, clémentines, oranges, pomelos et
+  noisettes
+photoUrl: /uploads/images/thumb_img_1173_1024.jpg
 ---
