--- a/content/producers/yohann-buret_20220729125640.md
+++ b/content/producers/yohann-buret_20220729125640.md
@@ -2,24 +2,41 @@
 id: ped66L5OJ
 lastname: Buret
 firstname: Yohann
-biography: |-
-  
+biography: >-
+  Je suis installé sur une petite ferme depuis 2007, qui compte 19,5Ha en bio,
+  sur un système pâturant et autonome, dit autrement les animaux mangent de
+  l’herbe au moins 10 mois de l’année et pour le reste du foin fait sur la
+  ferme.
 
-  La bergerie de la Violaie est une ferme menée en agriculture biologique.
 
-  Yohann Buret est multi producteur !
+  \
 
-  De lait de brebis qu'il transforme en yaourts,  brebis doux et fromages
+  Il y a 3 petits ateliers liés aux animaux : ovin lait en transformation yaourts et fromages, ovin viande et bovin viande.
 
-  de merguez de brebis
 
-  De colis de viande d'agneau
+  Un nouvel atelier de crêpes / galettes vient de rentrer en fabrication. Actuellement la farine pour les crêpes provient du blé de la ferme, l’objectif est le même pour la farine de sarrasin.
 
-  De crêpes et galettes tournées à partir de lait de brebis.
-activity: production lait de brebis, viande d'agneau, merguez
-address: "Bergerie La Violaie, "
+
+  Toutes les ventes se font en Vente Directe : marché - magasin de producteur - amap
+
+
+  La bergerie recrute :
+
+
+  Manque plus qu'un associé !
+
+
+  Intéressé-e ? contactez Yohann au 07 68 73 23 05 
+
+
+  ou par mail  fermedelaviolaie@gmail.com
+activity: 🤔 vous voulez vraiment toute la liste , paysan éleveur ovin bovin
+  fromager crêpier  tout un CV !🤣
+address: Bergerie La Violaie, la Pouëze
 postcode: 49370 Erdre en Anjou
 city: La Pouëze
+phone: 07 68 73 23 05
+email: fermedelaviolaie@gmail.com
 photoUrl: /uploads/images/img_7520.jpg
 contracts:
   - contrat-de-viande-dagneau
