Update Producteur “yohann-buret_20220729125640”

--- a/content/producers/yohann-buret_20220729125640.md
+++ b/content/producers/yohann-buret_20220729125640.md
@@ -42,4 +42,5 @@ contracts:
   - contrat-de-viande-dagneau
   - contrat-yaourts-de-brebis
   - contrat-fromages-et-yaourts-de-brebis
+  - contrat-crepes-galettes-2022-2023
 ---
