Update Producteur “yohann-buret_20220729125640”

--- a/content/producers/yohann-buret_20220729125640.md
+++ b/content/producers/yohann-buret_20220729125640.md
@@ -37,7 +37,7 @@ postcode: 49370 Erdre en Anjou
 city: La Pouëze
 phone: 07 68 73 23 05
 email: fermedelaviolaie@gmail.com
-photoUrl: /uploads/images/portrait_yohann..jpg
+photoUrl: /uploads/images/img_7520.jpg
 contracts:
   - contrat-de-viande-dagneau
   - contrat-yaourts-de-brebis
