Update Producteur “julien-cesbron_20221014200045”

--- a/content/producers/julien-cesbron_20221014200045.md
+++ b/content/producers/julien-cesbron_20221014200045.md
@@ -2,7 +2,7 @@
 id: 2Kkw2Um1F
 lastname: Cesbron
 firstname: Julien
-biography: Test
+biography: photo Copyright Yannick Lecoq
 activity: Poulets
 photoUrl: /uploads/images/portrait_julien.jpg
 ---
