Update Producteur “maria-irazoki_20220620191126”

--- a/content/producers/maria-irazoki_20220620191126.md
+++ b/content/producers/maria-irazoki_20220620191126.md
@@ -2,7 +2,9 @@
 id: EkeRs5RMo
 lastname: Irazoki
 firstname: Maria
-biography: >-2
+biography: >-
+  photo  Copyright Yannick Lecoq 
+
    paysanne boulangère
 
   Au sujet du pain : Le pain était le but, la raison d’être de notre agriculture et l’agriculture, la base de notre culture. Il était la base de notre nourriture et il est devenu un accessoire de table, souvent interdit par les médecins ou par l’estomac du consommateur. Le consommateur a perdu contact tant avec le producteur de blé qu’avec le transformateur, autrefois le moulin, ouvert à tout le monde, aujourd’hui, l’usine doublement hermétique.  Du pain intégral au pain blanc : Le pain blanc était considéré comme le meilleur, celui que l’on gardait pour la fin lorsqu’on avait la chance d’en avoir.  Les nutritionnistes, pendant longtemps, l’ont préconisé, prétendant que le pain complet était indigeste et déminéralisant. Plus personne ne conteste que le pain blanc soit extrêmement appauvri en minéraux, en vitamines et en fibres ni que le pain complet soit bien meilleur pour la santé. Quant au risque de déminéralisation, il n’existe pas avec le pain au levain.  A défaut d’une appellation précise, l’usage a consacré les appellations suivantes :  Pain intégral, pain fait avec du blé simplement moulu, sans aucun tamisage. Il contient donc la totalité du son. Pain complet, pain fait avec du blé dont on a retiré par tamisage, une partie du son ou avec de la farine blanche à laquelle on a rajouté une certaine quantité de son. Pain bis, même type de pain que le précédent mais le tamisage est plus poussé ( tamis plus fin) Pain blanc, pain fait avec de la farine dont on a retiré la totalité du son ! Pain au levain, pain à la levure. La levure, dite de boulangerie, est de la levure de bière. La fermentation est de type alcoolique : les sucres sont transformés en gaz carbonique et en alcool qui s’évapore à la cuisson. Les pains à la levure sont très aérés avec de larges alvéoles. Attention, un levain sur levure, c’est pareil. Cela signifie qu’on a prélevé une boule de pâte (à la levure) d’une précédente fournée, avec laquelle on ensemence la fournée suivante… cela n’a rien à voir avec le levain naturel. Le levain sauvage (ou naturel) se forme à partir des microorganismes naturellement présents dans l’air, la farine, l’eau et sur le récipient. Des bactéries transforment les sucres en acide tandis que les levures naturelles font lever le pain mais beaucoup moins que la levure. C’est ce qui explique qu’un pain au levain naturel aura une mie peu alvéolée avec une saveur acide plus ou moins prononcée. Il a aussi plus de goût, se conserve plus longtemps et est plus digeste.
