Update Producteur “nicolas-oran_20220704091737”

--- a/content/producers/nicolas-oran_20220704091737.md
+++ b/content/producers/nicolas-oran_20220704091737.md
@@ -2,7 +2,10 @@
 id: 0iHnhNscu
 lastname: Oran
 firstname: Nicolas
-biography: Légumes bio, cultivés en plein champ et sous serre.
+biography: |-
+  photo  Copyright Yannick Lecoq 
+
+  Légumes bio, cultivés en plein champ et sous serre.
 activity: Maraîcher
 address: Communaux de Grassval
 postcode: 49630 Corné
