Update Producteur “julie-migaud_20220812165253”

--- a/content/producers/julie-migaud_20220812165253.md
+++ b/content/producers/julie-migaud_20220812165253.md
@@ -7,7 +7,7 @@ activity: productrice de fromages de chèvre
 address: "EARL La Voie Lactée, 2 route des Poiriers "
 postcode: "49680"
 city: Neuillé
-photoUrl: /uploads/images/che-vre.png
+photoUrl: /uploads/images/img_7255.jpg
 contracts:
   - contrat-fromages-de-chevre-2022
 ---
