Update Producteur “yohann-buret_20220729125640”

--- a/content/producers/yohann-buret_20220729125640.md
+++ b/content/producers/yohann-buret_20220729125640.md
@@ -30,6 +30,9 @@ biography: >-
 
 
   ou par mail  fermedelaviolaie@gmail.com
+
+
+  ![la violaie recherche un-e associé-e](/uploads/la-violaie-recherche-un-e-associe-e.png "la violaie recherche un-e associé-e")
 activity: 🤔 vous voulez vraiment toute la liste , paysan éleveur ovin bovin
   fromager crêpier  tout un CV !🤣
 address: Bergerie La Violaie, la Pouëze
