--- a/content/producers/thomas-lecomte_20230104222323.md
+++ b/content/producers/thomas-lecomte_20230104222323.md
@@ -6,6 +6,5 @@ biography: À﻿ venir
 activity: Producteur de lentilles vertes et huiles de tournesol, colza et cameline
 city: Cornillé les Caves
 photoUrl: /uploads/images/thumb_img_4650_1024.jpg
-contracts:
-  - contrat-boeuf-veau-et-porc-2022-2023
+contracts: []
 ---
