Update Producteur “thomas-lecomte_20230104222323”

--- a/content/producers/thomas-lecomte_20230104222323.md
+++ b/content/producers/thomas-lecomte_20230104222323.md
@@ -6,5 +6,6 @@ biography: À﻿ venir
 activity: Producteur de lentilles vertes et huiles de tournesol, colza et cameline
 city: Cornillé les Caves
 photoUrl: /uploads/images/thumb_img_4650_1024.jpg
-contracts: []
+contracts:
+  - huiles-et-lentilles-2023
 ---
