Update Producteur “thomas-lecomte_20230104222323”

--- a/content/producers/thomas-lecomte_20230104222323.md
+++ b/content/producers/thomas-lecomte_20230104222323.md
@@ -4,6 +4,7 @@ lastname: Lecomte
 firstname: Thomas
 biography: À﻿ venir
 activity: Producteur de lentilles vertes et huiles de tournesol, colza et cameline
+address: La Gagnerie
 city: Cornillé les Caves
 photoUrl: /uploads/images/thumb_img_4650_1024.jpg
 contracts:
