Update Producteur “thomas-lecomte_20230104222323”

--- a/content/producers/thomas-lecomte_20230104222323.md
+++ b/content/producers/thomas-lecomte_20230104222323.md
@@ -2,7 +2,25 @@
 id: WzEtzIcAQ
 lastname: Lecomte
 firstname: Thomas
-biography: À﻿ venir
+biography: >-
+  J’ai repris la ferme de la Gagnerie en 2019, hors cadre familial, elle compte
+  75 hectares. La quasi totalité de la surface est cultivée ; avec des moments
+  de repos (luzerne ou trèfle), la dernière année de prairie, souvent, je mets
+  les cochons au pâturage (tournant idéalement). Je cultive blé, triticale,
+  féverole, orge, pois protéagineux, tournesol, maïs, lentille, cameline, colza,
+  avoine, seigle, pomme de terre ; je cultive très souvent en association
+  (exemple : céréale + féverole ou orge + pois ou lentille + cameline…). Je
+  réalise aussi des semis de trèfles dans les céréales, afin d’enrichir le sol
+  sans apporter d’engrais. Les enchaînements de cultures sont raisonnés pour
+  limiter l’enherbement ou pour enrichir sol avant une culture exigeante… Je
+  travaille en évitant au maximum le labour (pas de labour en 2021, 2,5 ha
+  labourés en 2022).
+
+
+  Je transforme une partie des oléagineux produits sur la ferme (tournesol, colza, cameline) afin d’améliorer la marge des culture et de bénéficier des tourteaux produits dans l’alimentation des porcs ; l’huile est toute vendue en direct au consommateur. Toutes les lentilles produites sur la ferme sont vendues en direct, après un tri méticuleux réalisé à l’extérieur (table densimétrique, trieur optique…).
+
+
+  J’élève une douzaine de truies de race Longué, les porcelets une fois sevrés sont, soit vendus à des collègues, soit engraissés sur la ferme pour être abattus à 12 mois et vendus en caissettes à la ferme. Les porcs consomment une partie des céréales produites, le reste est vendu en gros à la récolte.
 activity: Producteur de lentilles vertes et huiles de tournesol, colza et cameline
 address: La Gagnerie
 city: Cornillé les Caves
