--- a/content/producers/renaud-alimeria_20221014195937.md
+++ b/content/producers/renaud-alimeria_20221014195937.md
@@ -6,4 +6,6 @@ biography: Test
 activity: Production et vente de fruits corses, clémentines, oranges, pomelos et
   noisettes
 photoUrl: /uploads/images/thumb_img_1173_1024-2.jpg
+contracts:
+  - contrat-oranges
 ---
