--- a/content/tutors/anthony-belier_20231024134226.md
+++ b/content/tutors/anthony-belier_20231024134226.md
@@ -1,7 +1,11 @@
 ---
 id: Hdw50xgS1
-lastname: belier
+lastname: Bélier
 firstname: Anthony
+address: ""
+postcode: "49800"
+city: Brain-sur-l'Authion
+phone: "0662849496"
 email: anthony.belier.perso@gmail.com
-photoUrl: /uploads/images/fromage-brebis.jpg
+photoUrl: /uploads/images/dessin-amap.jpg
 ---
