Update Tuteur “anthony-belier_20231024134226”

--- a/content/tutors/anthony-belier_20231024134226.md
+++ b/content/tutors/anthony-belier_20231024134226.md
@@ -1,6 +1,6 @@
 ---
 id: Hdw50xgS1
-lastname: belier
+lastname: Bélier
 firstname: Anthony
 email: anthony.belier.perso@gmail.com
 photoUrl: /uploads/images/fromage-brebis.jpg
