Update Tuteur “anthony-belier_20231024134226”

--- a/content/tutors/anthony-belier_20231024134226.md
+++ b/content/tutors/anthony-belier_20231024134226.md
@@ -2,6 +2,7 @@
 id: Hdw50xgS1
 lastname: Bélier
 firstname: Anthony
+phone: "0662849496"
 email: anthony.belier.perso@gmail.com
-photoUrl: /uploads/images/fromage-brebis.jpg
+photoUrl: /uploads/images/dessin-amap.jpg
 ---
