--- a/content/tutors/anthony-belier_20231024134226.md
+++ b/content/tutors/anthony-belier_20231024134226.md
@@ -2,6 +2,8 @@
 id: Hdw50xgS1
 lastname: Bélier
 firstname: Anthony
+postcode: "49800"
+city: Brain-sur-l'Authion
 phone: "0662849496"
 email: anthony.belier.perso@gmail.com
 photoUrl: /uploads/images/dessin-amap.jpg
