--- a/content/contracts/pain-2022.md
+++ b/content/contracts/pain-2022.md
@@ -1,5 +1,5 @@
 ---
-title: Contrat pain 2023
+title: Contrat pain 2024
 description: >-
   Il est proposé  du pain au levain (mélange de farines locales type 80 et type
   110), cuit au feu de bois, produit selon le cahier des charges de l’
@@ -11,8 +11,9 @@ description: >-
 
   Pain spécial (cumin/fromage ou origan/sésame ou pavot) de 500g
 
+  Une augmentation des tarifs cette année, discutez avec Maria pour en savoir plus.
 
-  Pensez à RENOUVELER VOTRE ADHESION pour 2023
+  Pensez à RENOUVELER VOTRE ADHESION pour 2024
 
 
   Et à vous inscrire à une PERMANENCE.
@@ -21,5 +22,5 @@ tutors:
   - 7G11ESSbi
 producer: EkeRs5RMo
 photoUrl: /uploads/images/pain.jpg
-documentPath: /uploads/files/contrat-pain-2023.pdf
+documentPath: /uploads/files/contrat-pain-2024.pdf
 ---
