Update Producteur “eva-boisteault_20240323155059”

--- a/content/producers/eva-boisteault_20240323155059.md
+++ b/content/producers/eva-boisteault_20240323155059.md
@@ -2,8 +2,8 @@
 id: CUxZnT2OZ
 lastname: Boisteault
 firstname: Eva
-biography: Productrice de fleurs coupées et MIX comestibles
-activity: "productrice "
+biography: Productrice
+activity: productrice de fleurs coupées et  comestibles
 address: ""
 postcode: 49 670
 city: Valanjou
