Update Producteur “thomas-lecomte_20230104222323”

--- a/content/producers/thomas-lecomte_20230104222323.md
+++ b/content/producers/thomas-lecomte_20230104222323.md
@@ -21,10 +21,10 @@ biography: >-
 
 
   J’élève une douzaine de truies de race Longué, les porcelets une fois sevrés sont, soit vendus à des collègues, soit engraissés sur la ferme pour être abattus à 12 mois et vendus en caissettes à la ferme. Les porcs consomment une partie des céréales produites, le reste est vendu en gros à la récolte.
-activity: Producteur de lentilles vertes et huiles de tournesol, colza et cameline
+activity: Producteur de lentilles vertes, de millet, d' huiles de tournesol,  de
+  colza et de cameline
 address: La Gagnerie
 city: Cornillé les Caves
 photoUrl: /uploads/images/thumb_img_4650_1024.jpg
-contracts:
-  - huiles-et-lentilles-2023
+contracts: []
 ---
